# Zoroark

./: .env.example  .gitignore  .venv_before_upgrade_freeze.txt  README.md  capture.py  diag.py  diag_results.txt  light-rays.json  pyproject.toml  scrape_test.py  scraped_content.txt  streamlit_app.py  test.py  test_client.py
src/mcp_docs_server/: config.py  main.py
src/mcp_docs_server/pipeline/: resolver.py  scraper.py
