[project]
name = "mcp-docs-server"
version = "0.1.0"
description = "Documentation retrieval server with URL resolution, scraping, and caching"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastmcp>=2.0.0",
    "crawl4ai>=0.4.0",
]
